--- a/b2b2c.html
+++ b/b2b2c.html
@@ -57,11 +57,18 @@
                                                 <li><a class="dropdown-item" href="b2b2c.html">B2B2C Commerce</a></li>
                                                 <li><a class="dropdown-item" href="d2c.html">D2C</a></li>
                                                 <li><a class="dropdown-item" href="b2c.html">B2C</a></li>
-                                                <li><a class="dropdown-item" href="multivendor.html">Multivendor</a></li>
+                                                <li><a class="dropdown-item" href="multivendor.html">Multi Vendor</a></li>
                                                 <!-- <li><a class="dropdown-item" href="#">Multi Vendor</a></li> -->
-                                                <li><a class="dropdown-item" href="#">Quick Commerce</a></li>
-                                                <li><a class="dropdown-item" href="#">Action 7</a></li>
-                                                <li><a class="dropdown-item" href="#">Action 8</a></li>
+                                                <li><a class="dropdown-item" href="multistore.html">Multi Store</a>
+                                                </li>
+                                                <li><a class="dropdown-item" href="multistore.html">Industries</a>
+                                                </li>
+
+                                                <li><a class="dropdown-item" href="omnichannel.html">Omni Channel</a></li>
+                                                <li><a class="dropdown-item" href="#">Custom Application</a></li>
+                                                <li><a class="dropdown-item" href="#">Mobile Applilcation</a></li>
+                                                <li><a class="dropdown-item" href="#">Geolocation Based Ecommerce</a></li>
+                                                <li><a class="dropdown-item" href="#">Headless</a></li>
                                                 <!-- <li>
                                                     <hr class="dropdown-divider">
                                                 </li> -->
@@ -69,17 +76,17 @@
                                             </ul>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="#">Industries</a>
+                                            <a class="nav-link active" aria-current="page" href="industries.html">Industries</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="#">Examples</a>
+                                            <a class="nav-link active" aria-current="page" href="examples.html">Examples</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="#">About Us</a>
+                                            <a class="nav-link active" aria-current="page" href="about.html">About Us</a>
                                         </li>
 
                                         <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="#">Contact Us</a>
+                                            <a class="nav-link active" aria-current="page" href="contact.html">Contact Us</a>
                                         </li>
 
 
@@ -96,7 +103,7 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="getstarted d-flex justify-content-end">
-                        <button class="btn btn-outline-success getstarted" type="submit">Get Started</button>
+                        <a href="contact.html"> <button class="btn btn-outline-success getstarted" type="submit">Get Started</button></a>
                     </div>
                 </div>
             </div>
