--- a/industries.html
+++ b/industries.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-    <title>B2B</title>
+    <title>Industries</title>
 </head>
 
 <body>
@@ -57,7 +57,8 @@
                                                 <li><a class="dropdown-item" href="b2b2c.html">B2B2C Commerce</a></li>
                                                 <li><a class="dropdown-item" href="d2c.html">D2C</a></li>
                                                 <li><a class="dropdown-item" href="b2c.html">B2C</a></li>
-                                                <li><a class="dropdown-item" href="multivendor.html">Multi Vendor</a></li>
+                                                <li><a class="dropdown-item" href="multivendor.html">Multi Vendor</a>
+                                                </li>
                                                 <li><a class="dropdown-item" href="multistore.html">Multi Store</a>
                                                 </li>
                                                 <li><a class="dropdown-item" href="multistore.html">Industries</a>
@@ -108,94 +109,7 @@
             </div>
         </div>
     </section>
-    <section class="b2b_banner">
-        <div class="container">
-            <div class="b2bcontent">
-                <h2>B2B Ecommerce</h2>
-                <p>Modernize your B2B ecommerce experience with customizable, scalable, future-ready wholesale and D2C
-                    solutions</p>
-            </div>
-        </div>
-    </section>
-    <section class="b2b_info">
-        <div class="container">
-            <div class="b2b_title text-center">
-                <div class="h3">Why Choose StoreHippo B2B Ecommerce Solutions</div>
-                <p>Grow your business with the most flexible B2B ecommerce platform designed for B2B, D2C and
-                    Omnichannel commerce</p>
-
-            </div>
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="b2b_info_left">
-
-                        <img src="./assests/b2b/bulk_order-removebg-preview.png" alt="bulk">
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="b2b_info_right">
-                        <h2>Bulk-Order Processing</h2>
-                        <p>Save time and make your B2B ecommerce business processes more efficient and error-free with
-                            bulk order processing. No need to go for repeated manual processing, use the one-click bulk
-                            order processing to handle hundreds of orders in one go.</p>
-                    </div>
-                </div>
-
-
-                <div class="col-lg-6">
-                    <div class="b2b_info_right">
-                        <h2>B2B Wallet/Credit Management</h2>
-                        <p>Get a complete wallet management feature to make buying and selling easier on your B2B
-                            marketplace or store. Set up store and loyalty wallets where your B2B ecommerce customers
-                            can store and redeem their loyalty rewards, store credits from refunds, cash backs or trade
-                            advances. Set up different wallet rules to add credits to the wallet. Easily manage full and
-                            partial refunds directly through your B2B ecommerce store wallet. </p>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="b2b_info_left">
-                        <img style="width: 100%;
-                    height: auto;" src="./assests/b2b/b2bcredit-removebg-preview.png" alt="bulk">
-                    </div>
-                </div>
-
-
-
-                <div class="col-lg-6">
-                    <div class="b2b_info_left">
-                        <img src="./assests/b2b/phishing-money-concept-virus-spam-stealing-money-cartoon-illustration-vector-removebg-preview.png"
-                            alt="bulk">
-                    </div>
-
-                </div>
-                <div class="col-lg-6">
-                    <div class="b2b_info_right">
-                        <h2>Wallet Management</h2>
-                        <p>Offer store wallets to your clients wherein they can store various loyalty rewards, cash
-                            backs, store credits from refunds or trade advances and redeem them later while placing an
-                            order. Help your customers manage their wallets by offering them a transparent view of
-                            wallet transactions and balances. Easily track and manage all the wallet transactions done
-                            by your customers right from your admin panel.</p>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="b2b_info_right">
-                        <h2>Loyalty Wallet</h2>
-                        <p>Encourage your customers to buy more on your online store by adding minimum and maximum
-                            redeem limits or product by giving them loyalty points in their wallets for registration,
-                            buying certain products or collecting their refund amount. Manage the loyalty specific
-                            redeem options</p>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="b2b_info_left">
-                        <img  style="padding: 20px 0" src="./assests/b2b/Customer-Loyalty-Purchases-opt-removebg-preview.png" alt="bulk">
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </section>
+    
     <section class="footer pt-5 pb-5">
         <div class="container">
             <div class="row">
