--- a/multistore.html
+++ b/multistore.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-    <title>B2B</title>
+    <title>Multistore</title>
 </head>
 
 <body>
@@ -57,7 +57,8 @@
                                                 <li><a class="dropdown-item" href="b2b2c.html">B2B2C Commerce</a></li>
                                                 <li><a class="dropdown-item" href="d2c.html">D2C</a></li>
                                                 <li><a class="dropdown-item" href="b2c.html">B2C</a></li>
-                                                <li><a class="dropdown-item" href="multivendor.html">Multi Vendor</a></li>
+                                                <li><a class="dropdown-item" href="multivendor.html">Multi Vendor</a>
+                                                </li>
                                                 <li><a class="dropdown-item" href="multistore.html">Multi Store</a>
                                                 </li>
                                                 <li><a class="dropdown-item" href="multistore.html">Industries</a>
@@ -108,54 +109,60 @@
             </div>
         </div>
     </section>
-    <section class="b2b_banner">
+    <section class="multistore_banner">
         <div class="container">
             <div class="b2bcontent">
-                <h2>B2B Ecommerce</h2>
-                <p>Modernize your B2B ecommerce experience with customizable, scalable, future-ready wholesale and D2C
-                    solutions</p>
+                <h2>Multi Store Ecommerce Solution</h2>
+                <!-- <h5><b>Build Scalable Multi-Vendor Marketplaces in No Time.</b></h5> -->
+                <p>Start your own chain of online stores for better and faster conversions.</p>
+                <ul>
+                    <li>Single admin, multiple storefronts</li>
+                    <li>Unique storefront for diverse product lines</li>
+                    <li>Centralised inventory and customer data</li>
+                    <li>Higher ROI with targeted marketing</li>
+                </ul>
+                    <!-- Focus on your business instead of development hassles.</p> -->
             </div>
         </div>
     </section>
-    <section class="b2b_info">
+    <!-- <section class="b2b_info">
         <div class="container">
             <div class="b2b_title text-center">
-                <div class="h3">Why Choose StoreHippo B2B Ecommerce Solutions</div>
-                <p>Grow your business with the most flexible B2B ecommerce platform designed for B2B, D2C and
-                    Omnichannel commerce</p>
+                <div class="h3">Features</div>
+                <p>Simple and empowering features of StoreHippo multi-vendor marketplace</p>
 
             </div>
             <div class="row">
                 <div class="col-lg-6">
                     <div class="b2b_info_left">
 
-                        <img src="./assests/b2b/bulk_order-removebg-preview.png" alt="bulk">
+                        <img src="./assests/multivendor/Register_yourself_and_List_your_products-removebg-preview.png"
+                            alt="bulk">
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="b2b_info_right">
-                        <h2>Bulk-Order Processing</h2>
-                        <p>Save time and make your B2B ecommerce business processes more efficient and error-free with
-                            bulk order processing. No need to go for repeated manual processing, use the one-click bulk
-                            order processing to handle hundreds of orders in one go.</p>
+                        <h2>Seller Self-Registration</h2>
+                        <p>SQuick and easy vendor registration allows vendors to register with complete details. Unique
+                            vendor account is created for each vendor by filling details in a simple registration form.
+                            Complete details of vendor company, address, login, bank details etc. captured in one go.
+                        </p>
                     </div>
                 </div>
 
 
                 <div class="col-lg-6">
                     <div class="b2b_info_right">
-                        <h2>B2B Wallet/Credit Management</h2>
-                        <p>Get a complete wallet management feature to make buying and selling easier on your B2B
-                            marketplace or store. Set up store and loyalty wallets where your B2B ecommerce customers
-                            can store and redeem their loyalty rewards, store credits from refunds, cash backs or trade
-                            advances. Set up different wallet rules to add credits to the wallet. Easily manage full and
-                            partial refunds directly through your B2B ecommerce store wallet. </p>
+                        <h2>Approval Flow</h2>
+                        <p>Admin has full control to approve or reject the products uploaded by the vendors. Products
+                            uploaded by vendors can be displayed on marketplace only after approval from the admin thus
+                            applying a check on any unwanted product uploads</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="b2b_info_left">
                         <img style="width: 100%;
-                    height: auto;" src="./assests/b2b/b2bcredit-removebg-preview.png" alt="bulk">
+                    height: auto;" src="./assests/multivendor/approvalflow.png" alt="bulk">
                     </div>
                 </div>
 
@@ -163,39 +170,66 @@
 
                 <div class="col-lg-6">
                     <div class="b2b_info_left">
-                        <img src="./assests/b2b/phishing-money-concept-virus-spam-stealing-money-cartoon-illustration-vector-removebg-preview.png"
-                            alt="bulk">
+                        <img src="./assests/multivendor/vendordashboard.jpg" alt="bulk">
                     </div>
 
                 </div>
                 <div class="col-lg-6">
                     <div class="b2b_info_right">
-                        <h2>Wallet Management</h2>
-                        <p>Offer store wallets to your clients wherein they can store various loyalty rewards, cash
-                            backs, store credits from refunds or trade advances and redeem them later while placing an
-                            order. Help your customers manage their wallets by offering them a transparent view of
-                            wallet transactions and balances. Easily track and manage all the wallet transactions done
-                            by your customers right from your admin panel.</p>
+                        <h2>Vendor Dashboard</h2>
+                        <p>Separate Vendor dashboard for each vendor gives easy understanding of inventory and order
+                            status. Vendor gets a snapshot of his business using the dashboard which provides order
+                            summary, sorting functionality, sales report, best selling products, revenue details and
+                            much more.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="b2b_info_right">
-                        <h2>Loyalty Wallet</h2>
-                        <p>Encourage your customers to buy more on your online store by adding minimum and maximum
-                            redeem limits or product by giving them loyalty points in their wallets for registration,
-                            buying certain products or collecting their refund amount. Manage the loyalty specific
-                            redeem options</p>
+                        <h2>Product Management</h2>
+                        <p>Allow easy management of products by vendors wherein vendors can add, edit, upgrade products
+                            by logging in. Give them the authority to add and view complete inventory, product variants,
+                            product details, pricing image etc. Upload products in bulk using CSV.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="b2b_info_left">
-                        <img  style="padding: 20px 0" src="./assests/b2b/Customer-Loyalty-Purchases-opt-removebg-preview.png" alt="bulk">
+                        <img style="padding: 20px 0" src="./assests/multivendor/productmanagement.jpeg" alt="bulk">
                     </div>
 
                 </div>
+                <div class="col-lg-6">
+                    <div class="b2b_info_left">
+                        <img src="./assests/multivendor/adminpaner.png" alt="bulk">
+                    </div>
+
+                </div>
+                <div class="col-lg-6">
+                    <div class="b2b_info_right">
+                        <h2>Admin Dashboard</h2>
+                        <p>Business owner gets a complete overview of everyday business by logging in the admin panel.
+                            Get the fine details of every aspect of your business like sales, revenue, vendor
+                            performance, bestselling products etc. to help you better business management.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="b2b_info_right">
+                        <h2>MACH Architecture</h2>
+                        <p>Leverage MACH architecture for ecommerce to build your disruptive multi vendor marketplace.
+                            Easily scale to new markets, sellers, product lines and customer groups by powering your
+                            online marketplace with the scalability, reliability, agility and flexibility of the MACH
+                            (Microservices, API-first, Cloud-Native, Headless) architecture for ecommerce..</p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="b2b_info_left">
+                        <img src="./assests/multivendor/mach-removebg-preview.png" alt="bulk">
+                    </div>
+
+                </div>
+
             </div>
         </div>
-    </section>
+    </section> -->
     <section class="footer pt-5 pb-5">
         <div class="container">
             <div class="row">
