--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-    <title>B2B</title>
+    <title>Examples</title>
 </head>
 
 <body>
@@ -57,7 +57,8 @@
                                                 <li><a class="dropdown-item" href="b2b2c.html">B2B2C Commerce</a></li>
                                                 <li><a class="dropdown-item" href="d2c.html">D2C</a></li>
                                                 <li><a class="dropdown-item" href="b2c.html">B2C</a></li>
-                                                <li><a class="dropdown-item" href="multivendor.html">Multi Vendor</a></li>
+                                                <li><a class="dropdown-item" href="multivendor.html">Multi Vendor</a>
+                                                </li>
                                                 <li><a class="dropdown-item" href="multistore.html">Multi Store</a>
                                                 </li>
                                                 <li><a class="dropdown-item" href="multistore.html">Industries</a>
@@ -108,92 +109,91 @@
             </div>
         </div>
     </section>
-    <section class="b2b_banner">
-        <div class="container">
-            <div class="b2bcontent">
-                <h2>B2B Ecommerce</h2>
-                <p>Modernize your B2B ecommerce experience with customizable, scalable, future-ready wholesale and D2C
-                    solutions</p>
+    <section class="contact pt-5">
+        <div class="container" data-aos="flip-left">
+            <div class="services_heading">
+                <h5 style="margin-top: 120px;">CONTACT<span class="dash"></span></h5>
+                <h1>CONTACT US</h1>
             </div>
-        </div>
-    </section>
-    <section class="b2b_info">
-        <div class="container">
-            <div class="b2b_title text-center">
-                <div class="h3">Why Choose StoreHippo B2B Ecommerce Solutions</div>
-                <p>Grow your business with the most flexible B2B ecommerce platform designed for B2B, D2C and
-                    Omnichannel commerce</p>
-
+            <div class="contact_map">
+                <!-- <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.096577810615!2d80.2408132745506!3d13.029521487291172!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5267eebeabd763%3A0x8527a0a53d544529!2sECBEE%20INNOVATIONS%20PVT%20LTD!5e0!3m2!1sen!2sin!4v1686654840992!5m2!1sen!2sin"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.096577810615!2d80.2408132745506!3d13.029521487291172!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5267eebeabd763%3A0x8527a0a53d544529!2sECBEE%20INNOVATIONS%20PVT%20LTD!5e0!3m2!1sen!2sin!4v1686654840992!5m2!1sen!2sin"
+                    width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="b2b_info_left">
-
-                        <img src="./assests/b2b/bulk_order-removebg-preview.png" alt="bulk">
+            <div class="contact_form">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="contact_address">
+                            <div class="address_list">
+                                <!-- <i class="fa fa-map-marker" aria-hidden="true"></i> -->
+                                <i class="fa fa-location-arrow" aria-hidden="true"></i>
+                                <h3>Location</h3>
+                                <p>23 ,3rd Floor Sai Muthu Siva Apartmetns, Pasumpon Muthuramalinga Thevar Rd, Nandanam,
+                                    Chennai, Tamil Nadu 600035
+                                <p>
+                            </div>
+                            <div class="address_list">
+                                <i class="fa fa-envelope" aria-hidden="true"></i>
+                                <h3>Email</h3>
+                                <p>info@example.com
+                                <p>
+                            </div>
+                            <div class="address_list">
+                                <i class="fa fa-phone" aria-hidden="true"></i>
+                                <h3>Call</h3>
+                                <p>+1 5589 55488 55s
+                                <p>
+                                <p>
+                                <p>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="b2b_info_right">
-                        <h2>Bulk-Order Processing</h2>
-                        <p>Save time and make your B2B ecommerce business processes more efficient and error-free with
-                            bulk order processing. No need to go for repeated manual processing, use the one-click bulk
-                            order processing to handle hundreds of orders in one go.</p>
-                    </div>
-                </div>
+                    <div class="col-lg-8">
+                        <div class="contact_address">
+                            <form action="">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <input type="text" placeholder="Name" id="name" class="form_control"></input>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <input type="text" placeholder="Email" id="email" class="form_control"></input>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <input type="text" placeholder="contact number" id="email" class="form_control"></input>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <input type="text" placeholder="Location" id="email" class="form_control"></input>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <input type="text" placeholder="Company Name" id="subject"
+                                            class="form_control"></input>
+                                        <textarea name="message" placeholder="Message" class="form_control"></textarea>
+                                        <div class="submit">
+                                            <button class="button">Get Message</button>
+                                        </div>
+
+                                    </div>
+                                    <!-- <div class="col-lg-12"> -->
+
+                                    <!-- </div> -->
+
+                                </div>
 
 
-                <div class="col-lg-6">
-                    <div class="b2b_info_right">
-                        <h2>B2B Wallet/Credit Management</h2>
-                        <p>Get a complete wallet management feature to make buying and selling easier on your B2B
-                            marketplace or store. Set up store and loyalty wallets where your B2B ecommerce customers
-                            can store and redeem their loyalty rewards, store credits from refunds, cash backs or trade
-                            advances. Set up different wallet rules to add credits to the wallet. Easily manage full and
-                            partial refunds directly through your B2B ecommerce store wallet. </p>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="b2b_info_left">
-                        <img style="width: 100%;
-                    height: auto;" src="./assests/b2b/b2bcredit-removebg-preview.png" alt="bulk">
-                    </div>
-                </div>
 
 
+                            </form>
 
-                <div class="col-lg-6">
-                    <div class="b2b_info_left">
-                        <img src="./assests/b2b/phishing-money-concept-virus-spam-stealing-money-cartoon-illustration-vector-removebg-preview.png"
-                            alt="bulk">
+                        </div>
                     </div>
-
-                </div>
-                <div class="col-lg-6">
-                    <div class="b2b_info_right">
-                        <h2>Wallet Management</h2>
-                        <p>Offer store wallets to your clients wherein they can store various loyalty rewards, cash
-                            backs, store credits from refunds or trade advances and redeem them later while placing an
-                            order. Help your customers manage their wallets by offering them a transparent view of
-                            wallet transactions and balances. Easily track and manage all the wallet transactions done
-                            by your customers right from your admin panel.</p>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="b2b_info_right">
-                        <h2>Loyalty Wallet</h2>
-                        <p>Encourage your customers to buy more on your online store by adding minimum and maximum
-                            redeem limits or product by giving them loyalty points in their wallets for registration,
-                            buying certain products or collecting their refund amount. Manage the loyalty specific
-                            redeem options</p>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="b2b_info_left">
-                        <img  style="padding: 20px 0" src="./assests/b2b/Customer-Loyalty-Purchases-opt-removebg-preview.png" alt="bulk">
-                    </div>
-
                 </div>
             </div>
+
         </div>
     </section>
     <section class="footer pt-5 pb-5">
