--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,17 @@
         rel="stylesheet">
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-    <title>Examples</title>
+    <link rel="icon" type="image/png" sizes="48x48" href="./assests/favicon-32x32.png">
+    <script src="./js/index.js"></script>
+    <script type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+  </script>
+  <script type="text/javascript">
+  (function(){
+  emailjs.init("x6gFhQTEtKHkJp2e2");
+  })();
+  </script>
+    <title>Contact Us</title>
 </head>
 
 <body>
@@ -153,42 +163,35 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-md-8 border-left py-3">
+                        <!-- <h1>Contact form</h1> -->
                         <div class="contact_address">
-                            <form action="">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <input type="text" placeholder="Name" id="name" class="form_control"></input>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <input type="text" placeholder="Email" id="email" class="form_control"></input>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <input type="text" placeholder="contact number" id="email" class="form_control"></input>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <input type="text" placeholder="Location" id="email" class="form_control"></input>
-                                    </div>
-                                    <div class="col-md-12">
-                                        <input type="text" placeholder="Company Name" id="subject"
-                                            class="form_control"></input>
-                                        <textarea name="message" placeholder="Message" class="form_control"></textarea>
-                                        <div class="submit">
-                                            <button class="button">Get Message</button>
-                                        </div>
-
-                                    </div>
-                                    <!-- <div class="col-lg-12"> -->
-
-                                    <!-- </div> -->
-
+                            <div class="row">
+                                <div class="col-md-6 form-group pb-3">
+                                    <h5 for="name">Name</h5>
+                                    <input type="text" class="form-control" id="name" placeholder="Enter name" />
                                 </div>
+                                <div class="col-md-6 form-group pb-3">
+                                    <h5 for="email">Email</h5>
+                                    <input type="email" class="form-control" id="email" placeholder="Enter email" />
+                                </div>
+                                <div class="col-md-6 form-group pb-3">
+                                    <h5 for="email">Company Name</h5>
+                                    <input type="name" class="form-control" id="company" placeholder="Company Name" />
+                                </div>
+                                <div class="col-md-6 form-group pb-3">
+                                    <h5 for="email">Contact Number</h5>
+                                    <input type="tel" class="form-control" id="contact" placeholder="Contact Number" />
+                                </div>
+                                <div class="col-md-12 form-group pb-3">
+                                    <h5 for="message">Message</h5>
+                                    <textarea class="form-control" id="message" rows="3"></textarea>
+                                </div>
+                                <div class="submit">
 
-
-
-
-                            </form>
-
+                                    <button class="btn btn-primary" onclick="sendMail()">Submit</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -266,6 +269,7 @@
             </div>
         </div>
     </section>
+  
 
 
     <script src="./js/jquery-3.6.1.min.js"></script>
