--- a/industries.html
+++ b/industries.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Css/Style.css">
+    <link rel="stylesheet" href="./Css/industries.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -15,6 +16,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/png" sizes="48x48" href="./assests/favicon-32x32.png">
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
@@ -64,10 +66,12 @@
                                                 <li><a class="dropdown-item" href="multistore.html">Industries</a>
                                                 </li>
 
-                                                <li><a class="dropdown-item" href="omnichannel.html">Omni Channel</a></li>
+                                                <li><a class="dropdown-item" href="omnichannel.html">Omni Channel</a>
+                                                </li>
                                                 <li><a class="dropdown-item" href="#">Custom Application</a></li>
                                                 <li><a class="dropdown-item" href="#">Mobile Applilcation</a></li>
-                                                <li><a class="dropdown-item" href="#">Geolocation Based Ecommerce</a></li>
+                                                <li><a class="dropdown-item" href="#">Geolocation Based Ecommerce</a>
+                                                </li>
                                                 <li><a class="dropdown-item" href="#">Headless</a></li>
                                                 <!-- <li>
                                                     <hr class="dropdown-divider">
@@ -76,17 +80,21 @@
                                             </ul>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="industries.html">Industries</a>
+                                            <a class="nav-link active" aria-current="page"
+                                                href="industries.html">Industries</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="examples.html">Examples</a>
+                                            <a class="nav-link active" aria-current="page"
+                                                href="examples.html">Examples</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="about.html">About Us</a>
+                                            <a class="nav-link active" aria-current="page" href="about.html">About
+                                                Us</a>
                                         </li>
 
                                         <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="contact.html">Contact Us</a>
+                                            <a class="nav-link active" aria-current="page" href="contact.html">Contact
+                                                Us</a>
                                         </li>
 
 
@@ -103,13 +111,15 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="getstarted d-flex justify-content-end">
-                        <a href="contact.html"> <button class="btn btn-outline-success getstarted" type="submit">Get Started</button></a>
+                        <a href="contact.html"> <button class="btn btn-outline-success getstarted" type="submit">Get
+                                Started</button></a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    
+    <section class="industries_content"></section>
+
     <section class="footer pt-5 pb-5">
         <div class="container">
             <div class="row">
