footer link updated

--- a/multistore.html
+++ b/multistore.html
@@ -252,17 +252,17 @@
                     <div class="useful_links">
                         <h3>Useful Links</h3>
                         <ul class="list-unstyled">
-                            <li><a href="#" class="text-decoration-none"><i class="fa fa-angle-right pb-3 me-2"
+                            <li><a href="index.html" class="text-decoration-none"><i class="fa fa-angle-right pb-3 me-2"
                                         aria-hidden="true"></i>Home</a></li>
-                            <li><a href="#" class="text-decoration-none"><i class="fa fa-angle-right pb-3  me-2"
+                            <li><a href="b2b.html" class="text-decoration-none"><i class="fa fa-angle-right pb-3  me-2"
                                         aria-hidden="true"></i>Solutions</a></li>
-                            <li><a href="#" class="text-decoration-none"><i class="fa fa-angle-right me-2 pb-3 "
+                            <li><a href="industries.html" class="text-decoration-none"><i class="fa fa-angle-right me-2 pb-3 "
                                         aria-hidden="true"></i>Industries</a></li>
-                            <li><a href="#" class="text-decoration-none"><i class="fa fa-angle-right me-2 pb-3 "
+                            <li><a href="examples.html" class="text-decoration-none"><i class="fa fa-angle-right me-2 pb-3 "
                                         aria-hidden="true"></i>Examples</a></li>
-                            <li><a href="#" class="text-decoration-none"><i class="fa fa-angle-right me-2 pb-3 "
+                            <li><a href="about.html" class="text-decoration-none"><i class="fa fa-angle-right me-2 pb-3 "
                                         aria-hidden="true"></i>About Us</a></li>
-                            <li><a href="#" class="text-decoration-none"><i class="fa fa-angle-right me-2 pb-3 "
+                            <li><a href="contact.html" class="text-decoration-none"><i class="fa fa-angle-right me-2 pb-3 "
                                         aria-hidden="true"></i>Contact Us</a></li>
                             <!-- <li><a href="#" class="text-decoration-none"><i class="fa fa-angle-right me-2 pb-3 "
                                         aria-hidden="true"></i>Privacy Policy</a></li> -->
